初始数据加载

--- a/templates/index.html
+++ b/templates/index.html
@@ -76,8 +76,8 @@
 <div class="content_box">
    <ul class="content_box_top">
       <li>
-        <a href="{{ url_for('train_plan') }}"><img src="../static/images/icon11.png"/></a>
-        <h3 class="obj_title">课程进度</h3>
+        <a href="{{ url_for('train_plan') }}"  onclick="get_info()" >  <img src="../static/images/icon11.png"/></a>
+        <h3 class="obj_title" onclick="get_info()" >课程进度</h3>
       </li>
       <li>
         <a href="{{ url_for('train_plan') }}"><img src="../static/images/icon21.png"/></a>
