--- a/templates/train_plan.html
+++ b/templates/train_plan.html
@@ -6,6 +6,7 @@
 <script src="../static/js/jquery1.42.min.js" type="text/javascript"></script>
 <script src="../static/js/jquery.js"></script>
 <script src="../static/js/jquery.superslide.2.1.1.js" type="text/javascript"></script>
+<script src="../static/js/actions.js" type="text/javascript"></script>
 <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts.min.js"></script>
 <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts-gl/echarts-gl.min.js"></script>
 <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts-stat/ecStat.min.js"></script>
@@ -26,7 +27,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <title>培养计划</title>
 </head>
-
+<script>
+    $("#submit").click(function(){
+        alert("hello");
+    })
+</script>
 <body>
 <div class="wapper_box">
 <div class="header_box"></div>
@@ -139,17 +144,14 @@
        <div class="content_box_bot_l">
                <div class='container' id="container" style="height: 100%"></div>
                <script type="text/javascript" src="../static/js/Tree.js"></script>
-               <input type="submit" value="Submit">
+               <input type="submit" onclick="submit()" value="Submit" >
                <input type="reset" name="butReset" value="reset按钮">
        </div>
    </ul>
-
 </div>
-
 <!--内容结束--> 
 
 </div>
-
 
 </body>
 
