--- a/templates/train_plan.html
+++ b/templates/train_plan.html
@@ -78,37 +78,69 @@
             <div class="info_news_but"><p class="on">课程进度</p><p>选课推荐</p></div>
             <div class="col-md-4">
                 <ul class="info_news_text info_news_text1 ">
+                    <p class="info1"> 总进度</p>
                     <div class="process-parent1">
                         <div class="process-son" id="bar" style="width: 40%;"><p class="on1">40%</p>
                         </div>
                     </div>
+                    <p class="info2"> 思想政治</p>
                     <div class="process-parent2">
                         <div class="process-son" id="bar" style="width: 50%;"><p class="on1">50%</p>
                         </div>
                     </div>
+                    <p class="info3"> 外语</p>
                     <div class="process-parent3">
                         <div class="process-son" id="bar" style="width: 60%;"><p class="on1">60%</p>
                         </div>
                     </div>
+                    <p class="info4"> 文化素质</p>
                     <div class="process-parent4">
-                        <div class="process-son" id="bar" style="width: 70%;"><p class="on1">70%</p>
+                        <div class="process-son" id="bar" style="width: 20%;"><p class="on1">20%</p>
                         </div>
                     </div>
+                    <p class="info5"> 体育</p>
                     <div class="process-parent5">
-                        <div class="process-son" id="bar" style="width: 40%;"><p class="on1">40%</p>
+                        <div class="process-son" id="bar" style="width: 100%;"><p class="on1">40%</p>
                         </div>
                     </div>
+                    <p class="info6"> 军事</p>
                     <div class="process-parent6">
                         <div class="process-son" id="bar" style="width: 50%;"><p class="on1">50%</p>
                         </div>
                     </div>
+                    <p class="info7"> 健康教育</p>
                     <div class="process-parent7">
                         <div class="process-son" id="bar" style="width: 60%;"><p class="on1">60%</p>
                         </div>
                     </div>
+                    <p class="info8"> 数据</p>
                     <div class="process-parent8">
                         <div class="process-son" id="bar" style="width: 70%;"><p class="on1">70%</p>
                         </div>
+                    </div>
+                    <p class="info9"> 物理</p>
+                    <div class="process-parent9">
+                        <div class="process-son" id="bar" style="width: 50%;"><p class="on1">50%</p>
+                        </div>
+                    </div>
+                    <p class="info10"> 计算机</p>
+                    <div class="process-parent10">
+                        <div class="process-son" id="bar" style="width: 60%;"><p class="on1">60%</p>
+                        </div>
+                    </div>
+                    <p class="info11"> 学科基础</p>
+                    <div class="process-parent11">
+                        <div class="process-son" id="bar" style="width: 70%;"><p class="on1">70%</p>
+                        </div>
+                    </div>
+                    <p class="info12"> 专业选修</p>
+                    <div class="process-parent12">
+                        <div class="process-son" id="bar" style="width: 70%;"><p class="on1">70%</p>
+                        </div>
+                    </div>
+                    <div class="submitReset">
+                        <input type="submit" onclick="submit()" value="提交" >
+                        <input type="reset" name="butReset" value="重置">
                     </div>
                 </ul>
             </div>
@@ -134,11 +166,6 @@
         <script type="text/javascript" src="../static/js/Tree.js"></script>
     </div>
 </div>
-<div class="submitReset">
-    <input type="submit" onclick="submit()" value="Submit" >
-    <input type="reset" name="butReset" value="reset按钮">
-</div>
-
 
 </body>
 
