调整树形图位置格式

--- a/templates/train_plan.html
+++ b/templates/train_plan.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="../static/css/style1.css" rel="stylesheet" type="text/css" />
-<script src="../static/js/jquery1.42.min.js" type="text/javascript"></script>
+<script src="../static/js/jquery-2.2.4.min.js" type="text/javascript"></script>
 <script src="../static/js/jquery.js"></script>
 <script src="../static/js/jquery.superslide.2.1.1.js" type="text/javascript"></script>
 <script src="../static/js/actions.js" type="text/javascript"></script>
@@ -11,10 +11,7 @@
 <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts-gl/echarts-gl.min.js"></script>
 <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts-stat/ecStat.min.js"></script>
 <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/extension/dataTool.min.js"></script>
-<script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/map/js/china.js"></script>
-<script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/map/js/world.js"></script>
 <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=aGaH4Ko0BgRvzly3OQFwWhOxFfX4Tl4z"></script>
-<script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/extension/bmap.min.js"></script>
 <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/simplex.js"></script>
 
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
@@ -161,12 +158,10 @@
             </script>
         </div>
     </ul>
-    <div class="content_box_bot_l">
-        <div class='container' id="container" style="height: 100%"></div>
-        <script type="text/javascript" src="../static/js/Tree.js"></script>
-    </div>
-</div>
+    <div id="container" style="width:1400px; height:750px;position: absolute; margin-top:0px; margin-left:290px;"></div>
+    <script type="text/javascript" src="../static/js/Tree.js"></script>
 
+</div>
 </body>
 
 </html>
