--- a/static/css/style1.css
+++ b/static/css/style1.css
@@ -681,7 +681,7 @@ a:active, a:focus {
 	}
 	.process-son {
 		position: relative;
-		background: #ff0000;
+		background: green;
 		height: 100%;
 		font-size: 8px;
 		text-align: center;
