调整按钮位置

--- a/templates/train_plan.html
+++ b/templates/train_plan.html
@@ -135,8 +135,10 @@
                         <div class="process-son" id="bar12" style="width: 70%;"><p class="on2" id = "on12">70%</p>
                         </div>
                     </div>
-                    <div class="submitReset">
+                    <div class="submit">
                         <input type="submit" onclick="submit()" value="提交 ">
+                    </div>
+                    <div class="reset">
                         <input type="reset" name="butReset" value="重置">
                     </div>
                 </ul>
