--- a/static/css/style1.css
+++ b/static/css/style1.css
@@ -674,9 +674,21 @@ a:active, a:focus {
 		width: 70px;
 		height: 20px;
 	}
-	.submitReset{
+	.submit{
 		position: absolute;
-		margin-top:450px;
+		margin-top:400px;
+		margin-left:100px;
+		height: 60px;
+		width: 100px;
+		border-radius: 3px;
+	}
+
+	.reset{
+		position: absolute;
+		margin-top:400px;
+		margin-left:250px;
+		height: 60px;
+		width: 100px;
 		border-radius: 3px;
 	}
 	.process-son {
